Fix signature in birthday card message

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h1>¡Feliz Cumpleaños, Tía!</h1>
                 <p>Una vuelta mas al sol</p>
                 <p>Por esta y mas vueltas al sol</p>
-                <div class="signature">Tu [Nombre/Sobri]</div>
+                <div class="signature">De: Johann</div>
             </div>
             <div class="footer-text">
                 <span>Pulsa para un abrazo virtual</span>
@@ -70,4 +70,5 @@
     </script>
 </body>
 </html>
+
 
